# tui-dash

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
src/: app.rs  i18n.rs  main.rs
src/data/: battery.rs  cpu.rs  disk.rs  docker.rs  history.rs  logs.rs  memory.rs  mod.rs  network.rs  process.rs  temperature.rs
src/widgets/: cpu_widget.rs  disk_widget.rs  docker_widget.rs  logs_widget.rs  memory_widget.rs  mod.rs  network_widget.rs  process_widget.rs  settings_widget.rs  tab_bar.rs  temperature_widget.rs
