[package]
name = "tui-dash"
version = "1.0.0"
edition = "2021"
description = "一个系统监控面板，支持 Linux 和 Windows（A terminal UI system monitor dashboard for Linux and Windows）"
license = "MIT"

[[bin]]
name = "tui-dash"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.26", features = ["all-widgets"] }
crossterm = "0.27"
sysinfo = "0.30"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
futures-util = "0.3"
textwrap = "0.16"
dirs = "5.0"
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
bollard = "0.16"
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Wmi",
    "Win32_System_EventLog",
    "Win32_System_Com",
] }
wmi = "0.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
